--- a/package.json
+++ b/package.json
@@ -1,37 +1,77 @@
 {
   "name": "agent-harbor-wizard",
+  "version": "1.0.0",
+  "description": "A modern web-based user interface for Agent Harbor - making AI-powered coding agents accessible to everyone",
+  "author": "Agent Harbor Wizard Contributors",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/YOUR_USERNAME/agent-harbor-wizard.git"
+  },
+  "bugs": {
+    "url": "https://github.com/YOUR_USERNAME/agent-harbor-wizard/issues"
+  },
+  "homepage": "https://github.com/YOUR_USERNAME/agent-harbor-wizard#readme",
+  "keywords": [
+    "agent-harbor",
+    "ai",
+    "coding-assistant",
+    "wizard",
+    "gui",
+    "claude",
+    "gemini",
+    "codex",
+    "cursor",
+    "react",
+    "typescript"
+  ],
   "private": true,
-  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "concurrently -k -n server,client -c blue,green \"npm:dev:server\" \"npm:dev:client\"",
     "dev:server": "node server/index.js",
     "dev:client": "wait-on tcp:3001 && vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint . --report-unused-disable-directives",
+    "format": "prettier --write .",
+    "test": "jest"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "socket.io-client": "^4.7.5",
+    "@heroicons/react": "^2.2.0",
     "cors": "^2.8.5",
     "dockerode": "^4.0.2",
     "express": "^4.19.2",
-    "socket.io": "^4.7.5"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react": "^4.2.1",
-    "concurrently": "^9.0.1",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0",
-    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
     "@types/dockerode": "^3.3.29",
+    "@types/express": "^4.17.21",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@typescript-eslint/eslint-plugin": "^8.48.0",
+    "@typescript-eslint/parser": "^8.48.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.20",
+    "concurrently": "^9.0.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "globals": "^16.5.0",
+    "jest": "^30.2.0",
+    "postcss": "^8.4.49",
+    "prettier": "^3.7.2",
+    "supertest": "^7.1.4",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.2.2",
+    "typescript-eslint": "^8.48.0",
+    "vite": "^5.2.0",
     "wait-on": "^7.2.0"
   },
   "overrides": {
