fix: Remove agent-harbor-temp submodule and add to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ Thumbs.db
 
 # Agent Harbor repository (cloned by wizard)
 agent-harbor-repo/
+server/agent-harbor-temp/
 
 # TypeScript
 *.tsbuildinfo
